@@ -1,0 +1,6 @@
+hello:world:how:are:you!
+hello<tab>world<tab>how<tab>are<tab><tab>you!
+user<tab>group<tab>id1<tab>id2
+x<tab>ay<tab>az
+x<tab>a <tab>aax <tab> x
+col1<tab>col2:val2<tab>col3<tab>
