@@ -1,0 +1,3 @@
+myfile
+myfile
+myfile.gz
